Fix dark mode bugs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,15 @@
 
 html {
   scroll-behavior: smooth;
+  color-scheme: light dark;
+}
+
+html.dark {
+  color-scheme: dark;
+}
+
+html.light {
+  color-scheme: light;
 }
 
 body {
